<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".Survey">

    <LinearLayout
        android:id="@+id/Q1"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="15dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/question1"/>

        <RadioGroup
            android:id="@+id/RG1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:gravity="center"
                android:id="@+id/True1"
                android:text="oui"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:gravity="center"
                android:id="@+id/False1"
                android:text="Non"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/next1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Suivant"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Q2"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="15dp"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/question2"/>

        <RadioGroup
            android:id="@+id/RG2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/True2"
                android:text="oui"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/False2"
                android:text="Non"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/next2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Suivant"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Q3"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="15dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/question3"/>

        <RadioGroup
            android:id="@+id/RG3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/True3"
                android:text="oui"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/False3"
                android:text="Non"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/next3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Suivant"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Q4"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVQuestion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="15dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/question4"/>

        <RadioGroup
            android:id="@+id/RG4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/True4"
                android:text="oui"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/False4"
                android:text="Non"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/next4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Suivant"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Q5"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVQuestion5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="15dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/question5"/>

        <RadioGroup
            android:id="@+id/RG5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/True5"
                android:text="oui"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/False5"
                android:text="Non"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="Valider"/>


</RelativeLayout>